Name:                tonca
Version:             0.1
Description:         Tomcat Scanner
License:             OtherLicense
License-file:        LICENSE
Author:              detroit team
Maintainer:          olvidate
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable tonca
  Main-is:           main.hs
  Build-Depends:     base >= 3 && < 5, stm >= 2.2.0.1, network >= 2.3.0.10,
                     split >= 0.1.4.2, haskell98 >= 1.1.0.1, bytestring >= 0.9.1.10,
                     case-insensitive >= 0.4.0.1, MissingH >= 1.1.1.0, tls >= 0.9.0,
                     http-types >= 0.6.8, http-enumerator-patched >= 0.7.3
  ghc-options:       -O2 -static -threaded -Wall

